# Synapse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Synapse.sln  book.toml  bootstrap-linux.sh  bootstrap.ps1  bootstrap.sh  vcpkg.json
Synapse/: Activators.h  Auto_associator.cpp  Auto_associator.h  BAM.h  CMakeLists.txt  Perceptron.cpp  Perceptron.h  Source.cpp  Synapse.vcxproj  Synapse.vcxproj.filters  activators_mat.h  hebbs.h  types.h
Synapse/Adapters/: Adapter.cpp  Adapter.h  Matf_.cpp  Matf_.h
Synapse/point generator/: generator.h
Tests/test_AutoAssociator/: test.cpp  test_AutoAssociator.vcxproj
Tests/test_activations/: test.cpp  test_activations.vcxproj
armadillo/lib/: armadillo_x64d.lib
book/: book.toml
book/book/: 404.html  chapter_1.html  convolution.html  data_structures.html  index.html  mnist_1.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md  chapter_1.md  convolution.md  data_structures.md  mnist_1.md
src/: SUMMARY.md
